--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   },
   "author": "",
   "devDependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.1",
+    "@mui/material": "^6.4.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@shadcn/ui": "^0.0.4",
     "@types/chrome": "^0.0.301",
@@ -35,6 +39,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.1",
+    "lucide-react": "^0.474.0",
     "tailwindcss-animate": "^1.0.7"
   }
 }
